project(SWIG_Demonstration LANGUAGES CXX )
cmake_minimum_required(VERSION 3.20)

#
#  The src directory CMAKE is going to generate SWIG Bindings and place them in this directory
#  We want a later project to use this generated code to write unit test or POC code with
#  We GLOB_RECURSE here for scope

file(GLOB_RECURSE swig_generated_csharp LIST_DIRECTORIES False CONFIGURE_DEPENDS "${CMAKE_BINARY_DIR}/bindings/csharp/*.cs")

add_subdirectory(src)


#
# This project creates 4 targets
#
# libexample   -- CPP Example Library to use SWIG against
# example_swig -- swig_add_library which generates csharp bindings based on libexample
# example_cs_inside_binary_tree  -- Demonstrates the need to not use LINK tag for in the same file tree as CMAKE_CURRENT_BINARY_DIR
# example_cs_outside_binary_tree -- Demonstrates NONE vs COMPILE but also highlights that SWIG Binding links do appear

if(WIN32)
  enable_language(CSharp)
  message(STATUS "swig_generated_csharp=${swig_generated_csharp}")
  add_executable(example_cs_inside_binary_tree ${swig_generated_csharp} src/csharp/CSharpSwigExample.cs)
endif()

# Discussion
#
# example_cs_outside_binary_tree
#
#  Problem:
#  In this project CMake will mark both example.cs and examplePINVOKE.cs as a NONE type making them unusable
#  The files are referenced using a LINK tag but the LINK tab does not respect SOURCE GROUP (Not Shown)
#
#  Fixes:  
#  If possible CMake should respect SOURCE_GROUP when set by the user as with out it all files appear in one giant 0 depth tree
#  This is cumbersom for larger projects with lots of generated code
#
#
# example_cs_inside_binary_tree
#
# Problem:
# Files generated relative to CMAKE_CURRENT_BINARY_DIR are marked as COMPILE types but include a LINK tag 
# Visual Sudio marks this as a loading error and dose not include the files
#
#   | Warning The file 'build-msvc17\bindings\csharp\example.cs' could not be added to the project.  
#   | Cannot add a link to the file build-msvc17\bindings\csharp\example.cs. 
#   | This file is within the project directory tree.	example_cs_inside_binary_tree			
#
# Fixes: 
# Do not use LINK tags when files are relative to CMAKE_CURRENT_BINARY_DIR as it is not allowed
# The user will have to organize his files in a file tree mirroring how he wnats the files to appear in 
# the solution explorer. 
#
# Example fixed VCProject file for comparison to ones generated by cmake 
